Will stop the Search bar from expanding too much

--- a/styles/header.css
+++ b/styles/header.css
@@ -16,6 +16,7 @@
     background-color: lightpink;
     flex:1;
     margin-left: 70px;
+    max-width: 300px;
   }
   .right-section{
     background-color: lightblue;
